# website_crawl

./: .env  .envexample  .gitignore  .gitignore.txt  HUONG_DAN.txt  QUICK_START.txt  README.md  THONG_TIN_DU_AN.txt  TONG_QUAN_DU_AN.txt  WORKERS_CONFIG.md  all_brands.txt  brands.txt  config.py  crawl_brands.py  database.sql  listing_crawler_only.py  main_pipeline.py  pyproject.toml
.github/workflows/: crawler.yml  weekly-listing-crawler.yml
Html_parse/: json.txt  lamthaocosmetics_brands.html  lamthaocosmetics_cerave.html  lamthaocosmetics_product.html  thegioiskindfood_cerave.html  thegioiskindfood_product.html  thegioiskinfood_brands.html
crawlers/: __init__.py  async_product_crawler.py  async_review_crawler.py  listing_crawler.py  product_crawler.py  review_crawler.py
database/: __init__.py  database_handler.py
utils/: __init__.py  async_helpers.py  helpers.py  logger.py
